Closed Bug 571160 Opened 15 years ago Closed 15 years ago

gfxFontUtils.cpp:438: warning: unused variable ‘glyphID’

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dholbert, Assigned: dholbert)

References

Details

Attachments

(1 file)

Building current mozilla-central, I get: { gfx/thebes/src/gfxFontUtils.cpp:438: warning: unused variable ‘glyphID’ } Patch coming up.
Attached patch fixSplinter Review
Attachment #450284 - Flags: review?(smontagu)
Attachment #450284 - Flags: review?(smontagu) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: