Bug 571160: fix unused variable warning. r=jdaggett